--- a/css/projectstyles.css
+++ b/css/projectstyles.css
@@ -2,12 +2,18 @@ html{
   height: 100%;
 }
 body{
-  height: 100%;
+  /* height: 100%; */
   overflow-x: hidden;
   /* width: 100%; */
   display: flex;
   flex-direction: column;
   /* position: relative; */
+  }
+
+  @media (min-width: 730px){
+    body{
+      height: 100%;
+    }
   }
 
   ::-webkit-scrollbar{
