--- a/css/style.css
+++ b/css/style.css
@@ -24,19 +24,19 @@ h2{
 }
 
 .background{
-  position: absolute;
+  position: relative; 
   width: 100%;
-  height: 100%;  
+  height: 100%;   
 }
 
 .title{
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   text-align: center;
   transform: translateX(-50%);
   z-index: 2;
-  background: rgba(138, 76, 213, 0.3);
+  background: rgba(0, 0, 0, 0.733);
   border-radius: 20px;
   width: 250px;
 }
@@ -71,7 +71,7 @@ h2{
   background-image: linear-gradient(#443C68,#635985);
   color: #9e9ad4;
   font-weight: bold;
-  padding-top: 200px;
+  padding-top: 150px;
   height: 500px;
   z-index: 0;
   text-align: center;
@@ -85,7 +85,7 @@ h2{
 }
 
 .workPic{
-  top: 950px;
+  top: 125%;
   left: 0;
   display: inline;
   position: absolute;
@@ -119,7 +119,7 @@ table{
   margin: 5% 25%;
   width: 50%;
   border: none;
-  border-radius: 30px;
+  border-radius: 15px;
   border-collapse: collapse;
   background-color: #cbbee3;
 }
