--- a/css/style.css
+++ b/css/style.css
@@ -54,17 +54,21 @@ h2{
 .middle{
   position: absolute;
   color: #645CBB;
-  padding-top: 10%;
+  /* padding-top: 10%; */
   text-align: center;
-  height: 600px;
+  height: 100%;
   width: 100%;
   z-index: 1;
 }
 
+.middle h2{
+  bottom: 1px;
+}
+
 .mypic{
-  height: 50%;
+  height: 35%;
   background-image: linear-gradient(#645CBB,#9f9dbe); 
-  border-radius: 200px;
+  border-radius: 100%;
 }
 
 .workex{
@@ -84,12 +88,17 @@ h2{
   border-radius: 50px;
 }
 
+.workexContent{
+  bottom: 50%;
+  position: relative;
+}
+
 .workPic{
-  top: 125%;
-  left: 0;
-  display: inline;
-  position: absolute;
-  height: 30%;
+  top: 15%;
+  left: 5%;
+  display: block;
+  position: relative;
+  height: 60%;
 }
 
 .life{
@@ -97,16 +106,22 @@ h2{
   background-image: linear-gradient(#393053,#18122B);
   padding-top: 75px;
   text-align: center;
-  height: 700px;
+  height: 100%;
+  max-height: 800px;
   color: #645CBB;
 }
 
+.life h1,h2,table{
+  bottom: 20%;
+  position: relative;
+}
+
 .studyPic{
-  top: 1500px;
-  left: 0;
-  display: inline;
-  position: absolute;
-  height: 30%;
+  top: 20%;
+  left: 5%;
+  display: block;
+  position: relative;
+  height: 35%;
 }
 
 @media (max-width: 730px){
@@ -116,7 +131,7 @@ h2{
 }
 
 table{
-  margin: 5% 25%;
+  margin: 3% 25%;
   width: 50%;
   border: none;
   border-radius: 15px;
@@ -125,39 +140,37 @@ table{
 }
 
 #skills{
+  padding-top: 50px;
   background-color: #EBC7E6;
   background-image: linear-gradient(#443C68,#635985);
   text-align: center;
   height: 100%;
+  max-height: 800px;
 }
 
-#skills h1, .row{
-  position: relative;
-  top: 15%;
-  align-items: center;
-}
 
 .skill1Pic{
-  top: 2300px;
-  left: 0;
+  top: 320%;
+  right: 10%;
   display: inline;
   position: absolute;
-  height: 30%;
+  height: 35%;
 }
 
 .skill2Pic{
-  top: 2300px;
-  right: 0;
+  top: 320%;
+  left: 10%;
   display: inline;
   position: absolute;
-  height: 30%;
+  height: 35%;
 }
 
 .card{
   background-color: aquamarine;
   border-radius: 1rem;
   width: 200px;
-  margin: 10px 25%;
+  margin: 15px 25%;
+  z-index: 1;
   }
 
 #contact-me{
