--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,18 @@
+html{
+  height: 100%;
+}
+
 .wrapper{
-  height: 100vh;
+  /* height: 100vh; */
   overflow-y: auto;
   overflow-x: hidden;
-  width: 100%;
+  /* width: 100%; */
+}
+
+@media (max-width: 730px){
+  body{
+    height: 100%;
+  }
 }
 
 ::-webkit-scrollbar{
@@ -104,30 +114,22 @@ h2{
 .life{
   background-color: #BFACE2;
   background-image: linear-gradient(#393053,#18122B);
-  padding-top: 75px;
   text-align: center;
-  height: 100%;
-  max-height: 800px;
+  height: 800px;
   color: #645CBB;
 }
 
-.life h1,h2,table{
-  bottom: 20%;
+.lifeContent{
+  bottom: 10%;
   position: relative;
 }
 
 .studyPic{
-  top: 20%;
-  left: 5%;
+  top: 40%;
+  left: 7%;
   display: block;
   position: relative;
-  height: 35%;
-}
-
-@media (max-width: 730px){
-  .studyPic,.workPic{
-    opacity: 0;
-  }
+  height: 30%;
 }
 
 table{
@@ -144,25 +146,48 @@ table{
   background-color: #EBC7E6;
   background-image: linear-gradient(#443C68,#635985);
   text-align: center;
-  height: 100%;
-  max-height: 800px;
+  height: 800px;
 }
 
+.skillContent{
+  position: relative;
+  bottom: 45%;
+}
 
 .skill1Pic{
-  top: 320%;
+  top: 35%;
   right: 10%;
-  display: inline;
-  position: absolute;
-  height: 35%;
+  display: inline-block;
+  position: relative;
+  height: 300px;
+  z-index: 0;
 }
 
 .skill2Pic{
-  top: 320%;
+  top: 35%;
   left: 10%;
-  display: inline;
-  position: absolute;
-  height: 35%;
+  display: inline-block;
+  position: relative;
+  height: 300px;
+  z-index: 0;
+}
+
+@media (max-width: 730px){
+  .skillContent{
+    bottom: 80%;
+  }
+  .skill1Pic,.skill2Pic{
+    top: 20%;
+  }
+  .top{
+    height: 50vh;
+  }
+  .background{
+    height: 50vh;
+  }
+  .title{
+    top: 20%;
+  }
 }
 
 .card{
@@ -179,6 +204,7 @@ table{
   text-align: center;
   background-color: #BFACE2;
   color: #645CBB;
+  z-index: 1;
 }
 
 .btn {
@@ -212,8 +238,9 @@ footer{
   background-color: rgb(73, 73, 73);
   padding-top: 1%;
   color: white;
-  height: 80px;
+  height: 10%;
   text-align: center;
+  z-index: 1;
 }
 
 .fa-footer{
