--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ h2{
 }
 
 .life{
-  background-color: white;
+  background-color: rgb(210, 202, 226);
   /* background-image: linear-gradient(#393053,#18122B); */
   text-align: center;
   height: 800px;
