--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ table{
 
 #contact-me{
   /* background-image: linear-gradient(#393053,#18122B); */
+  height: 50vh;
   background-color: white;
   padding: 100px 0;
   text-align: center;
@@ -424,6 +425,15 @@ footer{
 .workexTitle p {
   font-size: medium;
   width: 80%;
+  justify-content: center;
+  text-align: center;
+}
+
+@media(max-width: 1400px){
+  .description p{
+    font-size: 10px;
+  }
+
 }
 
 .card-footer {
